samples/_failures_safe/1761130121_7302b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcec0abf.c: In function ‘main’:
./samples/SAFE/__tmp_bcec0abf.c:151:39: error: expected ‘)’ at end of input
  151 |     process_text(&analyzer, input_text
      |                 ~                     ^
      |                                       )
./samples/SAFE/__tmp_bcec0abf.c:151:5: error: expected declaration or statement at end of input
  151 |     process_text(&analyzer, input_text
      |     ^~~~~~~~~~~~
